# agent-harness

./: .gitignore  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PLANS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/guidance/: docker.md  python.md
docs/plans/: 2026-03-25-mvp.md  2026-03-25-refactor-stacks.md  2026-03-26-full-restructure.md  2026-03-26-init-setup-checks.md
docs/superpowers/plans/: 2026-03-27-claudemd-audit-and-security-audit.md  2026-03-29-skill-product-experience.md  2026-04-14-agent-weiss-foundations.md  2026-04-14-agent-weiss-roadmap.md
docs/superpowers/specs/: 2026-04-14-agent-weiss-design.md
policies/compose/: escaping.rego  images.rego  services.rego
policies/dockerfile/: cache.rego  healthcheck.rego  layers.rego  secrets.rego
policies/gitignore/: secrets.rego  secrets_test.rego
policies/javascript/: package_test.rego
policies/python/: pytest.rego  test_isolation.rego
scripts/: update-gitignore-templates.sh
skills/agent-harness/: SKILL.md  docker-guidance.md  python-guidance.md
src/agent_harness/: __init__.py  audit.py  cli.py  config.py  conftest.py  detect.py  fix.py  git_files.py  lint.py  preset.py  registry.py  runner.py  setup.py  workspace.py
src/agent_harness/init/: diagnostic.py  scaffold.py  templates.py
src/agent_harness/security/: audit.py  gitleaks_scanner.py  models.py  npm_audit.py  osv_scanner.py  pip_audit.py
src/ai_harness/: __init__.py  audit.py  cli.py  config.py  detect.py  fix.py  lint.py
src/ai_harness/checks/: ty.py
src/ai_harness/init/: scaffold.py  templates.py
tests/: test_cli.py  test_config.py  test_conftest_diagnostic.py  test_detect.py  test_diagnostic.py  test_git_files.py  test_init.py  test_lint_all.py  test_setup.py  test_skip.py  test_workspace.py
tests/presets/docker/: test_conftest_compose_check.py  test_conftest_dockerfile_check.py  test_hadolint_check.py
tests/presets/dokploy/: test_conftest_dokploy_check.py  test_detect.py
tests/presets/javascript/: test_biome_check.py  test_conftest_package_check.py  test_detect.py  test_type_check.py
tests/presets/python/: test_detect.py  test_ruff_check.py  test_setup.py
tests/presets/universal/: test_claudemd_setup.py  test_conftest_gitignore_check.py  (+4 more)
tests/security/: test_audit.py  test_gitleaks_scanner.py  test_models.py  test_npm_audit.py  test_osv_scanner.py  test_pip_audit.py  test_security_config.py
(+81 files in other folders)
