[project]
name = "agent-harness"
version = "0.1.0"
description = "AI-first harness engineering — deterministic controls for AI agents"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
agent-harness = "ai_harness.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_harness"]
