[project]
name = "agent-harness"
version = "0.2.0"
description = "AI-first harness engineering — deterministic controls for AI agents"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "tomlkit>=0.13",
]

[project.scripts]
agent-harness = "agent_harness.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]
