[project]
name = "agentic-harness"
version = "0.3.3"
description = "Deterministic quality gates for AI-assisted development"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Denis Tomilin", email = "denis@agentic.engineering" },
]
keywords = ["ai", "agents", "linting", "quality", "harness", "rego", "conftest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "tomlkit>=0.13",
]

[project.urls]
Homepage = "https://github.com/yoselabs/agent-harness"
Repository = "https://github.com/yoselabs/agent-harness"
Issues = "https://github.com/yoselabs/agent-harness/issues"

[project.scripts]
agent-harness = "agent_harness.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]
